# supahunt

./: .dockerignore  .gitignore  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  SUPPORT.md  pyproject.toml  supahunt.py
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  new_template.md
.github/workflows/: codacy.yml  codeql.yml  lint.yml  main.yml
modules/: __init__.py  base.py  discovery.py  discovery_v2.py  enumerator.py  exploiter.py  filter_injection.py  graphql_tester.py  reporter.py  review_injector.py  rpc_abuser.py  storage_exploiter.py  token_forger.py  webhook_poisoner.py
templates/: supabase-misconfig.yaml
