[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "supahunt"
version = "3.0.0"
description = "Supabase Security Auditing & Penetration Testing Framework"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "rootdouer"},
]
keywords = [
    "supabase", "security", "pentest", "penetration-testing",
    "bug-bounty", "rls", "graphql", "postgrest", "audit",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "requests>=2.28.0",
    "rich>=13.0.0",
    "urllib3>=1.26.0",
]

[project.urls]
Homepage = "https://github.com/MikeRoss27/supahunt"
Repository = "https://github.com/MikeRoss27/supahunt"
Issues = "https://github.com/MikeRoss27/supahunt/issues"

[project.scripts]
supahunt = "supahunt:main"

[tool.setuptools]
py-modules = ["supahunt"]

[tool.setuptools.packages.find]
include = ["modules*"]

[tool.flake8]
max-line-length = 120
exclude = ["output", "build", "dist", ".eggs"]
